@@ -598,6 +598,7 @@ GEN    poltobasis(GEN nf,GEN x);
 GEN    coltoalg(GEN nf,GEN x);
 
 GEN    check_polrel(GEN nf, GEN P, ulong *lim);
+GEN    check_polrel_monic(GEN nf, GEN P, ulong *lim);
 GEN    get_arch_real(GEN nf,GEN x,GEN *emb,long prec);
 GEN    make_integral(GEN nf, GEN L0, GEN f, GEN listpr);
 GEN    rnfallbase(GEN nf, GEN pol, ulong lim, GEN rnfeq, GEN *pD, GEN *pfi);
